<resources>
    <string name="app_name">Ed Sheeran</string>
    <string name="song">Let\'s play your favourite song</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="stop">stop</string>
    <string name="play"><![CDATA[|>]]></string>
</resources>
