<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/happier"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song"
        android:gravity="center_horizontal"
        android:textSize="26sp"
        android:textColor="#212121"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:textColor="#FFFFFF"
        android:id="@+id/progress"
        android:layout_above="@+id/seekBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:textColor="#FFFFFF"
        android:id="@+id/total"
        android:layout_above="@+id/seekBar"
        android:layout_alignParentRight="true"/>


    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/seekBar"
        android:layout_margin="16dp"
        android:background="@color/seekBar"
        android:layout_above="@id/linear"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">


        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:layout_weight="1" />

        <Button
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:id="@+id/pause"
            android:layout_weight="1"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewind"
            android:id="@+id/rewind"
            android:layout_weight="1" />

    </LinearLayout>


</RelativeLayout>